<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_dosen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_memory_black_24dp"
        android:layout_marginTop="60dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/member_login"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/gray"
        android:digits="@string/filterAlphanumeric"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/et_hint"
        android:textColorHint="@color/et_hint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:digits="@string/filterAlphanumeric"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/et_hint"
        android:textColorHint="@color/et_hint" />

    <!-- Login Button -->

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/biru_tua"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <!-- Link to Login Screen -->

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />
</LinearLayout>
